src/css/courses-list.css
@import 'general.css';
@import 'header.css';
@import 'footer.css';
@import 'sidebar.css';
@import 'main-content.css';

.courses-list {
    width: 100%;
    display: flex;
    flex-wrap: wrap;
    justify-content: center;

}

.course-container {
    display: inline-block;
    font-size: 1.5rem;
    text-align: center;
    margin: 0px 30px 30px;
}

.course-item {
    width: 100px;
    height: 100px;
    border-radius: 50px;
    margin: 0 auto;  
    transition: transform .2s;  
    overflow: hidden;
}

/*Color of icons depending of level*/
.course-item.beginner {
    background-color: var(--blue);
    border: 5px solid var(--blue-2);
}

.course-item.elementary {
    background-color: var(--orange);
    border: 5px solid var(--orange-2);
}
.course-item.elementary-kids {
    background-color: var(--green);
    border: 5px solid var(--green-2);
}
.course-item span {
    line-height:100px;
    font-size: 3rem;
}

.course-item img {
    width: 3rem;
}

.course-item:hover {
    transform: scale(1.1);
}

.course-title {
    font-weight: bold;
}

.course-date {
    font-size: 1rem;
}

.course-row {
    display: flex;
    flex-direction: row-reverse;
    flex-wrap: wrap;
    width: 700px;
    justify-content: center;
}

@media screen and (min-width: 500px) {
    .courses-list {
        width: 80%;
        max-width: 628px;
    }
}

